# devops-audit

./: .gitignore  CLAUDE.md  README.md  demo_start.sh  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.demo  .env.example  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/v1/endpoints/: auth.py  scans.py  users.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: models.py
backend/app/scanners/: container_scanner.py  demo_results.py  devops_scanner.py  github_scanner.py  k8s_scanner.py
backend/app/services/: github.py
backend/app/workers/: celery_app.py  tasks.py
backend/migrations/: README  env.py
backend/migrations/versions/: 20260525_0001_initial_schema.py
frontend/: next.config.js  package.json  tailwind.config.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth/callback/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/scans/[id]/: page.tsx
frontend/src/components/: NewScanModal.tsx  ScanCard.tsx
frontend/src/lib/: api.ts
infrastructure/docker/: Dockerfile.backend
